# entrepreneur-presentation

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
core/: settings.py  urls.py
presentations/: views.py
presentations/static/: compare.css  compare.js
presentations/templates/: index.html  presentation.html  walmart.html
